# apispec.yaml
@@ -1204,6 +1204,50 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/error_server_response'
+        post:
+            tags:
+                - 'Customer'
+            description: Create order
+            summary: Create order
+            security:
+                - JWTAuthCustomer: []
+            parameters:
+                - in: path
+                  name: orderID
+                  required: true
+                  schema:
+                      type: number
+                      example: 27
+            requestBody:
+                content:
+                    multipart/form-data:
+                        schema:
+                            $ref: '#/components/schemas/order_request'
+            responses:
+                '200':
+                    description: Success getting of single customer's order
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/success_response'
+                '401':
+                    description: Unauthorized user
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/error_unauthorized'
+                '422':
+                    description: Validation failure
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/error_validation_response'
+                '500':
+                    description: Server Error
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/error_server_response'
 
     /api/customers/orders/{orderID}:
         get:
@@ -1250,50 +1294,6 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/error_unauthorized'
-                '500':
-                    description: Server Error
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/error_server_response'
-        post:
-            tags:
-                - 'Customer'
-            description: Create order
-            summary: Create order
-            security:
-                - JWTAuthCustomer: []
-            parameters:
-                - in: path
-                  name: orderID
-                  required: true
-                  schema:
-                      type: number
-                      example: 27
-            requestBody:
-                content:
-                    multipart/form-data:
-                        schema:
-                            $ref: '#/components/schemas/order_request'
-            responses:
-                '200':
-                    description: Success getting of single customer's order
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/success_response'
-                '401':
-                    description: Unauthorized user
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/error_unauthorized'
-                '422':
-                    description: Validation failure
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/error_validation_response'
                 '500':
                     description: Server Error
                     content:
@@ -1704,6 +1704,71 @@ paths:
                                                 example: 'somelink'
                                     data:
                                         $ref: '#/components/schemas/order_response'
+                                    pagination:
+                                        $ref: '#/components/schemas/pagination'
+                '401':
+                    description: Unauthorized user
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/error_unauthorized'
+                '500':
+                    description: Server Error
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/error_server_response'
+    /api/drivers/history_orders:
+        get:
+            tags:
+                - 'Driver'
+            description: Get history completed orders by driver
+            summary: Get history completed orders by driver
+            security:
+                - JWTAuthDriver: []
+            parameters:
+                - in: query
+                  name: sortVolume
+                  schema:
+                      type: boolean
+                      example: true
+                - in: query
+                  name: sortWeight
+                  schema:
+                      type: boolean
+                      example: true
+                - in: query
+                  name: sortDistance
+                  schema:
+                      type: boolean
+                      example: true
+            responses:
+                '200':
+                    description: Success getting list of available order for driver
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                properties:
+                                    status:
+                                        type: string
+                                        example: 'OK'
+                                    code:
+                                        type: number
+                                        example: 200
+                                    error:
+                                        type: string
+                                        example: null
+                                    links:
+                                        type: object
+                                        properties:
+                                            self:
+                                                type: string
+                                                example: 'somelink'
+                                    data:
+                                        type: array
+                                        items:
+                                            $ref: '#/components/schemas/order_response'
                                     pagination:
                                         $ref: '#/components/schemas/pagination'
                 '401':
@@ -2235,7 +2300,7 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/error_server_response'
-      
+
     /api/stats/aggregates/order_count:
         get:
             tags:
