# deliveries/handlers/customer_handler.go
@@ -12,6 +12,7 @@ import (
 	"mime/multipart"
 	"net/http"
 	"strconv"
+	"strings"
 
 	"github.com/labstack/echo/v4"
 )
@@ -157,6 +158,176 @@ func (handler CustomerHandler) DeleteCustomer(c echo.Context) error {
 }
 
 /*
+ * Customer - List Order 
+ * ------------------------------------
+ * Mendapatkan list order berdasarkan 
+ * query param yang telah ditentukan
+ */
+func (handler CustomerHandler) ListOrders(c echo.Context) error {
+	
+	userID, role, _ := middleware.ReadToken(c.Get("user"))
+	links := map[string]string{}
+	filters := []map[string]interface{} {}
+
+	// pagination param
+	limit, err := strconv.Atoi(c.QueryParam("limit"))
+	if err != nil {
+		limit = 50
+	}
+	page, err := strconv.Atoi(c.QueryParam("page"))
+	if err != nil {
+		page = 1
+	}
+
+	// reject if not customer
+	if role != "customer" {
+		return c.JSON(http.StatusUnauthorized, web.ErrorResponse{
+			Status: "ERROR",
+			Code: http.StatusUnauthorized,
+			Error: "Unauthorized user",
+			Links: links,
+		})
+	}
+
+	// Multi status filters
+	statusQuery := c.QueryParam("status")
+	if statusQuery != "" {
+		statusArr := strings.Split(statusQuery, ",")
+		statusFilters := []map[string]string{}
+		for _, status := range statusArr {
+			statusFilters = append(statusFilters, map[string]string{
+				"field": "status", 
+				"operator": "=", 
+				"value": status,
+			})
+		}
+		filters = append(filters, map[string]interface{}{
+			"or": statusFilters,
+		})
+	}
+
+	// set self links and filters
+	links["self"] = configs.Get().App.BaseURL + "/api/customers/orders?page=" + strconv.Itoa(page)
+	filters = append(filters, map[string]interface{}{
+		"field": "customer_id", 
+		"operator": "=", 
+		"value": strconv.Itoa(userID),
+	})
+
+	// get authenticated userdata
+	_, err = handler.userService.FindCustomer(userID)
+	if err != nil {
+		return helpers.WebErrorResponse(c, err, links)
+	}
+	
+	// call order service
+	ordersRes, err := handler.orderService.FindAll(0, 0, filters, []map[string]interface{}{
+		{ "field": "updated_at", "desc": true },
+	})
+	if err != nil {
+		return helpers.WebErrorResponse(c, err, links)
+	}
+		
+
+	// make pagination data & formatting pagination links
+	paginationRes, err := handler.orderService.GetPagination(page, limit, filters)
+	if err != nil {
+		return c.JSON(http.StatusInternalServerError, web.ErrorResponse{
+			Status: "ERROR",
+			Code: http.StatusInternalServerError,
+			Error: err.Error(),
+			Links: links,
+		})
+	}
+	pageUrl := fmt.Sprintf("%s/api/customers/orders?page=", configs.Get().App.BaseURL)
+	links["first"] = pageUrl + "1"
+	links["last"] = pageUrl + strconv.Itoa(paginationRes.TotalPages)
+	if paginationRes.Page > 1 {
+		links["previous"] = pageUrl + strconv.Itoa(page - 1)
+	}
+	if paginationRes.Page < paginationRes.TotalPages {
+		links["previous"] = pageUrl + strconv.Itoa(page + 1)
+	}
+
+	// Success list response
+	return c.JSON(http.StatusOK, web.SuccessListResponse{
+		Status: "OK",
+		Error: nil,
+		Code: http.StatusOK,
+		Links: links,
+		Data: ordersRes,
+		Pagination: paginationRes,
+	})
+}
+
+/*
+ * Customer - Detail Order
+ * ------------------------------------
+ * Mendapatkan detail order customer
+ * yang hanya dimiliki customer
+ */
+func (handler CustomerHandler) DetailOrder(c echo.Context) error {
+	userID, role, _ := middleware.ReadToken(c.Get("user"))
+	links := map[string]string{}
+	orderRes := entities.OrderResponse{}
+
+	// orderID param
+	orderID, err := strconv.Atoi(c.Param("orderID"))
+	if err != nil {
+		return c.JSON(http.StatusBadRequest, web.ErrorResponse{
+			Status: "OK",
+			Code: http.StatusBadRequest,
+			Error: "Order ID parameter is invalid",
+			Links: links,
+		})
+	}
+
+	// reject if not customer
+	if role != "customer" {
+		return c.JSON(http.StatusUnauthorized, web.ErrorResponse{
+			Status: "ERROR",
+			Code: http.StatusUnauthorized,
+			Error: "Unauthorized user",
+			Links: links,
+		})
+	}
+
+	// set self links and filters
+	links["self"] = fmt.Sprintf("%s/api/customers/orders/%s", configs.Get().App.BaseURL,strconv.Itoa(orderID))
+
+	// get authenticated userdata
+	customer, err := handler.userService.FindCustomer(userID)
+	if err != nil {
+		return helpers.WebErrorResponse(c, err, links)
+	}
+	
+	// call service order
+	orderRes, err = handler.orderService.Find(orderID)
+	if err != nil {
+		return helpers.WebErrorResponse(c, err, links)
+	}
+
+	// reject if customer_id doesn't match
+	if orderRes.CustomerID != customer.ID {
+		return c.JSON(http.StatusBadRequest, web.ErrorResponse{
+			Status: "ERROR",
+			Code: http.StatusBadRequest,
+			Error: "order doesn't belong to currently authenticated customer",
+			Links: links,
+		})
+	}
+
+	return c.JSON(http.StatusOK, web.SuccessResponse{
+		Status: "OK",
+		Code: http.StatusOK,
+		Error: nil,
+		Links: links,
+		Data: orderRes,
+	})
+}
+
+
+/* 
  * Customer - Detail Order - Get Histories
  * ---------------------------------
  * List history tracking dari satu detail order tunggal
